plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
//    id "com.gorylenko.gradle-git-properties" version "2.4.1"
}

group = 'de.haevn'
version = '0.0.1-SNAPSHOT'
description = 'backend'

bootRun {
    jvmArgs += "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:9876"
    jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
//    implementation 'com.h2database:h2'
    developmentOnly("org.springframework.boot:spring-boot-devtools")
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.12")
//    implementation("pl.project13.maven:git-commit-id-plugin:4.9.10")
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation 'com.fasterxml.jackson.core:jackson-core'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.core:jackson-annotations'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    implementation 'com.github.librepdf:openpdf:1.3.30'
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'org.springframework.boot:spring-boot-devtools'
// https://mvnrepository.com/artifact/com.google.googlejavaformat/google-java-format
    implementation("com.google.googlejavaformat:google-java-format:1.31.0")
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.postgresql:postgresql:42.7.7'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation("org.apache.pdfbox:pdfbox:3.0.6")
    implementation("org.apache.pdfbox:pdfbox:3.0.6")
    implementation("io.github.openhtmltopdf:openhtmltopdf-core:1.1.31")
    implementation("io.github.openhtmltopdf:openhtmltopdf-pdfbox:1.1.31")
    implementation("io.github.openhtmltopdf:openhtmltopdf-svg-support:1.1.31")
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named("compileJava") {
    doLast {
        file(".trigger-file").setLastModified(System.currentTimeMillis())
    }
}